<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/back_border">

    <CheckBox
        android:id="@+id/shield_gift"
        style="@style/ChatShiledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shield_gift"/>
        <CheckBox
            android:id="@+id/shield_system"
            style="@style/ChatShiledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shield_system"/>
        <CheckBox
            android:id="@+id/shield_chat"
            style="@style/ChatShiledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shield_chat"/>


    </LinearLayout>

    <ImageView
        android:layout_width="18dp"
        android:layout_height="10dp"
        android:background="@mipmap/triangle_down"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>