<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="133dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="240dp"
        android:layout_height="133dp"
        android:background="@drawable/round_coner_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prompt"
                android:textColor="#000000"
                android:textSize="17sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/tv_dialogname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/confirm_exit"
                android:textColor="#222222"
                android:textSize="15sp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/horizon_linear"
            android:layout_width="240dp"
            android:layout_height="1dp"
            android:background="@color/app_linear" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="#fe5a59"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="133dp"
                android:background="@color/app_linear" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="#fe5a59"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>