<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_coner_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ban_user"
                android:textColor="@color/app_blue"
                android:textSize="14sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/ban_content"
                android:paddingTop="30dp"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1111111111111内容禁言内容禁言内容容禁言内容禁言内容容禁言内容禁言内容容禁言内容禁言内容禁言内容禁言内容禁言内容禁言内容禁言内容禁言内容"
                android:textColor="#222222"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/horizon_linear"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_linear" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ban_cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/app_blue"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/app_linear" />

            <TextView
                android:id="@+id/ban_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ban_confirm"
                android:textColor="@color/app_blue"
                android:textSize="13sp"  />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>