<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/sys_msg_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="33.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true">

            <ImageView
                android:id="@+id/sys_msg_btn"
                android:layout_width="23.0dip"
                android:layout_height="23.0dip"
                android:layout_centerVertical="true"
                android:background="@drawable/system_msg_btn" />

            <TextView
                android:id="@+id/sys_msg_count_tv"
                android:layout_width="16.0dip"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14.0dip"
                android:background="@drawable/sys_msg_count_bkg"
                android:gravity="center"
                android:minWidth="12.0dip"
                android:text="20"
                android:textColor="@android:color/white"
                android:textSize="9.0sp"
                android:visibility="gone" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/announce_icon"
            android:layout_width="58.0dip"
            android:layout_height="23.0dip"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:layout_marginTop="15.0dip"
            android:layout_toLeftOf="@id/sys_msg_btn_layout"
            android:background="@drawable/announce_btn"
            android:clickable="true" />

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="36.0dip"
            android:layout_height="36.0dip"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:src="@drawable/default_user_icon"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:layout_toLeftOf="@id/announce_icon"
            android:layout_toRightOf="@id/user_icon"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="哈哈哈"
                android:textColor="@color/edit_hint_txt_color"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/user_room_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:gravity="center"
                android:text="2909"
                android:textColor="#ffffffff"
                android:textSize="12.0sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@color/white_5" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <LinearLayout
            android:id="@+id/live_setting_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">



            <EditText
                android:id="@+id/live_title_edit"
                style="@style/ChuShouEditStyle"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/top_round_corner_bkg"
                android:drawableLeft="@drawable/write_icon"
                android:drawablePadding="20.0dip"
                android:gravity="center|left"
                android:hint="@string/input_live_title"
                android:inputType="text"
                android:text="标题"
                android:paddingLeft="15.0dip" />

            <RelativeLayout
                android:id="@+id/select_live_tag"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@drawable/bottom_round_corner_bkg"
                android:clickable="true"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/online_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15.0dip"
                    android:src="@drawable/game_tag_icon" />

                <ImageView
                    android:id="@+id/tag"
                    android:layout_width="17.0dip"
                    android:layout_height="17.0dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10.0dip"
                    android:src="@drawable/open_tag_n" />

                <TextView
                    style="@style/ChuShouEditStyle"
                    android:id="@+id/live_tag_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20.0dip"
                    android:layout_toLeftOf="@id/tag"
                    android:layout_toRightOf="@id/online_tag"
                    android:clickable="false"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:hint="@string/select_live_tag"
                    android:text="标签"
                    android:textColor="@color/edit_hint_txt_color"
                    android:textSize="12.0sp" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/orientation_radio_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/top_round_corner_bkg"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/horizontal_btn"
                    style="@style/VideoDensityStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/horizontal_str" />

                <RadioButton
                    android:id="@+id/portrait_btn"
                    style="@style/VideoDensityStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/portrait_str" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/live_density_radio_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1.0dip"
                android:background="@drawable/bottom_round_corner_bkg"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/normal_density"
                    style="@style/VideoDensityStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/normal_density" />

                <RadioButton
                    android:id="@+id/high_density"
                    style="@style/VideoDensityStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/high_density" />

                <RadioButton
                    android:id="@+id/super_density"
                    style="@style/VideoDensityStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/super_density" />
            </RadioGroup>

            <TextView
                android:id="@+id/rtmp_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/online_live_control_btn"
                    style="@style/LiveBtnStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_weight="2.4"
                    android:background="@drawable/start_live_btn_bkg"
                    android:minWidth="215.0dip"
                    android:text="@string/start_live" />

            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/live_status_layout"
            layout="@layout/online_live_status_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>